--- a/NSACloudService/Views/MyContacts/Index.cshtml
+++ b/NSACloudService/Views/MyContacts/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<NSACloudService.DL.MyContact>
+﻿@using NSACloudService.DL
+@model IEnumerable<NSACloudService.DL.MyContact>
 
 @{
     ViewBag.Title = "title";
@@ -8,10 +9,10 @@
 </div>
 
 <div class="row">
-    <div class="col-md-3"><img src="/Images/Logo.jpg" width="200" height="200" class="img-thumbnail" /></div>
+    <div class="col-md-3"><img src="/Images/Logo.jpg" width="150" height="150" class="img-thumbnail" /></div>
     <div class="col-md-9">
         <div class="media-list">
-            @foreach (var contact in Model)
+            @foreach (MyContact contact in Model)
             {
                 <div class="media">
                     <a class="pull-left" href="#">
@@ -19,14 +20,25 @@
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">@contact.Name</h4>
-                        ...
+                        <a href="mailto:@contact.Mail">@contact.Mail</a>
+                        @if (!contact.IsOnline.HasValue)
+                        {
+                            <div style="color: gray">unknown</div>
+                        }
+                        else
+                        {
+                            if (contact.IsOnline.Value)
+                            {
+                                <div style="color: green">online</div>
+                            }
+                            else
+                            {
+                                <div style="color: red">offline</div>
+                            }
+                        }
                     </div>
                 </div>
             }
         </div>
     </div>
 </div>
-
-
-
-
