--- a/NSACloudService/Views/Shared/_Layout.cshtml
+++ b/NSACloudService/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="/myfiles">My Files</a></li>
+                        <li><a href="/mypictures">My Pictures</a></li>
                         <li><a href="/mymail">My Mail</a></li>
                         <li><a href="/mycontacts">My Contacts</a></li>
                     </ul>
